cambios en el boton de vuelta

--- a/error404.html
+++ b/error404.html
@@ -95,8 +95,8 @@
                 <h2>ERROR 404</h2>
                 <p>Something goes wrong, please go back to home and try again</p>
             </div>
-            <div class="container-fluid d-flex justify-content-center errorCta">
-                <button type="button" class="btn btn-outline-primary d-flex justify-content-center errorButton">Back to
+            <div class="errorCta d-flex justify-content-center">
+                <button type="button" class="errorBotones btn btn-outline-primary d-flex justify-content-center ">Back to
                     Home!</button>
         </section>
     </div>
