--- a/tripadvisor.html
+++ b/tripadvisor.html
@@ -57,7 +57,7 @@
     <nav class="navbar navbar-expand-lg fixed-top menuVanu">
       <div class="container-fluid">
         <a class="navbar-brand logo" href="index.html">
-          <img src="../entrega15_aplicacandoSass/img/vc_logoblanco.svg" alt="logo vanu carpio">
+          <img src="img/vc_logoblanco.svg" alt="logo vanu carpio">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
