--- a/about.html
+++ b/about.html
@@ -48,6 +48,10 @@
     <!--Animate-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+    <!--AOS-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+
     <!-- Link al Css-->
     <link rel="stylesheet" href="css/style.css">
 
@@ -56,7 +60,7 @@
 <body>
     <!-- Menú -->
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top menuVanu">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark menuVanu">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="index.html">
                     <img src="img/vc_logoblanco.svg" alt="logo vanu carpio">
@@ -68,20 +72,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active menuLink" aria-current="page" href="about.html">ABOUT</a>
+                            <a class="nav-link active menuLink" aria-current="page" href="work.html">WORK</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle menuLink" href="work.html" id="navbarDropdownMenuLink"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                WORK
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="work.html">All</a></li>
-                                <li><a class="dropdown-item" href="kevingston.html">Kevingston</a></li>
-                                <li><a class="dropdown-item" href="transener.html">Transener Transba</a></li>
-                                <li><a class="dropdown-item" href="tripadvisor.html">TripAdvisor App</a></li>
-                                <li><a class="dropdown-item" href="smartfarming.html">SmartFarming</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link active menuLink" aria-current="page" href="about.html">ABOUT</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link menuLink" href="contact.html">CONTACT</a>
@@ -94,28 +88,23 @@
     </header>
 
     <!--Header de la sección-->
-    <section class="headAbout container p-0">
+    <section class="container p-0 headAbout">
         <div class="row m-0 p-0">
-    
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 typewritter p-0">
-            <div id="quote"><span 
-                style='font-size:4rem;
-                '>&#128171;</span>
-                <p>Keep your eyes in the stars and your feets in the ground
-                </p>         
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 quote">
+                <span style='font-size:8vh;
+                '>&#128171;</span></br>
+                Keep your eyes in the stars and your feets in the ground.
             </div>
-        </div>
-
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 vanu">
-            <img src="img/aboutvanu.jpeg" alt="Foto de Vanu Carpio">
-        </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 vanu">
+                <img src="img/aboutvanu.jpeg" alt="Foto de Vanu Carpio">
+            </div>
     </section>
 
     <!-- Mi descripción-->
-    <section class="container p-0 containerAbout">
+    <section class="container containerAbout">
         <div class="row m-0 p-0">
-            <div class="col-12 py-0 titleAbout">
-                <p>About Me</p>
+            <div class="col-12 py-0 title">
+                <p data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">About Me</p>
             </div>
             <!--ENGLISH-->
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 p-5 about">
@@ -139,7 +128,7 @@
                 <p> Me apasiona crear nuevas experiencias y productos, con una fuerte identidad visual y resolver
                     problemas con una visión centrado en los usuarios.</p>
                 <p> Durante mi carrera, he trabajado en diferentes áreas, desarrollando
-            mis habilidades en diseño digital, diseño textil y actualmente ux/ui.</p>
+                    mis habilidades en diseño digital, diseño textil y actualmente ux/ui.</p>
                 <p> ¡Siempre buscando nuevos desafíos!</p>
             </div>
 
@@ -176,16 +165,17 @@
 
     <!--CV-->
     <section class="container p-0 containerCv">
-        <div class="row p-0 my-5">
+        <div class="row p-0 m-5">
             <!--Emoji Column-->
-            <div class="emoji col-xl-3 col-lg-3 col-md-3 col-sm-12 p-5">
-                <span style='font-size:4rem;'>&#128073;&#127996;</span>                </div>
+            <div class="emoji col-xl-3 col-lg-3 col-md-3 col-sm-12 ps-5">
+                <span style='font-size:4rem;'>&#128073;&#127996;</span>
+            </div>
             <!--Clients-->
-            <div class="clients col-xl-3 col-lg-3 col-md-3 col-sm-12 p-5">
-                <div class="cvTitle py-2 border-bottom">
+            <div class="clients col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                <div class="cvTitle border-bottom">
                     CLIENTS
                 </div>
-                <div class="contenido d-flex flex-column justify-content-between pt-2">
+                <div class="contenido d-flex flex-column justify-content-between">
                     <p>Enfocarte</p>
                     <p>Transener Transba</p>
                     <p>SmartFarming</p>
@@ -197,11 +187,11 @@
                 </div>
             </div>
             <!--Work Experience-->
-            <div class="workExp col-xl-3 col-lg-3 col-md-3 col-sm-12 p-5">
-                <div class="cvTitle py-2 border-bottom">
+            <div class="workExp col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                <div class="cvTitle border-bottom">
                     WORK EXPERIENCE
                 </div>
-                <div class="exp pt-2">
+                <div class="exp">
                     <h5>Making Sense LLC</h5>
                     <p class="contenido">UX Designer</p>
                 </div>
@@ -223,11 +213,11 @@
                 </div>
             </div>
             <!--Skills-->
-            <div class="skills col-xl-3 col-lg-3 col-md-3 col-sm-12 p-5">
-                <div class="cvTitle py-2 border-bottom">
+            <div class="skills col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                <div class="cvTitle border-bottom">
                     SKILLS
                 </div>
-                <div class="contenido pt-2">
+                <div class="contenido">
                     <p>Ux Ui Design</p>
                     <p>Strategic Marketing</p>
                     <p>Branding</p>
@@ -373,6 +363,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
+
+    <!--aos script-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
