--- a/error404.html
+++ b/error404.html
@@ -46,44 +46,34 @@
 </head>
 
 <body>
-    <!-- Menú -->
-    <header>
-        <nav class="navbar navbar-expand-lg fixed-top menuVanu">
-            <div class="container-fluid">
-                <a class="navbar-brand logo" href="index.html">
-                    <img src="img/vc_logoblanco.svg" alt="logo vanu carpio">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon hamburguesa"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active menuLink" aria-current="page" href="about.html">ABOUT</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle menuLink" href="work.html" id="navbarDropdownMenuLink"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                WORK
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="work.html">All</a></li>
-                                <li><a class="dropdown-item" href="kevingston.html">Kevingston</a></li>
-                                <li><a class="dropdown-item" href="transener.html">Transener Transba</a></li>
-                                <li><a class="dropdown-item" href="tripadvisor.html">TripAdvisor App</a></li>
-                                <li><a class="dropdown-item" href="smartfarming.html">SmartFarming</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link menuLink" href="contact.html">CONTACT</a>
-                        </li>
-                    </ul>
-                </div>
+  <!-- Menú -->
+  <header>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark menuVanu">
+      <div class="container-fluid">
+        <a class="navbar-brand logo" href="index.html">
+          <img src="img/vc_logoblanco.svg" alt="logo vanu carpio">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon hamburguesa"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active menuLink" aria-current="page" href="work.html">WORK</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active menuLink" aria-current="page" href="about.html">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menuLink" href="contact.html">CONTACT</a>
+            </li>
+          </ul>
+        </div>
 
-            </div>
-        </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
 
     <!--Contenido-->
     <div class="container p-0 generalError">
